[package]
name = "firewall-common"
version = "0.1.0"
edition = "2024"

license.workspace = true

[features]
default = []
user = ["aya"]

[dependencies]
aya = { workspace = true, optional = true }
zerocopy = "0.8.24"
bytemuck = { version = "1.23.0", default-features = false, features = ["derive"] }

[lib]
path = "src/lib.rs"